@@ -22,6 +22,7 @@ apt (0.9.5.2) UNRELEASED; urgency=low
   * apt-pkg/contrib/cmdline.cc:
     - apply patch from Daniel Hartwig to fix a segfault in case
       the LongOpt is empty (Closes: #676331)
+    - fix segfault with empty LongOpt in --no-* branch
 
   [ Justin B Rye ]
   * doc/apt-cdrom.8.xml:
